--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              Saurav Vishal
 bio:                "Android Developer, Open Source Enthusiast."
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+description:        #nothing
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.jpg'
@@ -37,7 +37,7 @@ disqus_shortname:   sauravvishal8797
   #ad-client:
   #ad-slot:
 #bing-verify:
-#email:
+email:              sauravvishal8797@gmail.com
 twitter:            vishal_saurav99
 facebook:           Saurav Vishal
 github-url:         sauravvishal8797
