--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Saurav Vishal
-bio:                "Android Developer, Open Source Enthusiast."
+bio:                "Android learner, Open Source Enthusiast."
 description:        #nothing
 reading_time:       true
 words_per_minute:   200
