--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Saurav Vishal
-bio:                "Android learner, Open Source Enthusiast."
+bio:                "Android developer, Open Source Enthusiast, Google Summer of Code'18 intern at FOSSASIA."
 description:        #nothing
 reading_time:       true
 words_per_minute:   200
@@ -42,7 +42,7 @@ twitter:            vishal_saurav99
 facebook:           Saurav Vishal
 github-url:         sauravvishal8797
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-#linkedin:          username
+linkedin:           saurav-vishal-517aab144
 #xing:              username
 instagram:          sauravvishal8797
 #lastfm:            username
